# agent-mesh

./: .env.example  .gitignore  .worktreeinclude  CLAUDE.md  Dockerfile.agent  Dockerfile.api  Dockerfile.coordinator  Dockerfile.telegram  Dockerfile.wiki  Makefile  README.md  architecture_diagram.py  docker-compose.pi.yml  docker-compose.yml  pyproject.toml  ruff.toml  run.sh
.claude/skills/: README.md
.claude/skills/verify-api/: SKILL.md  check_api.py
.claude/skills/verify-belief-consolidation/: SKILL.md  check_deltas.py  snapshot.py
.claude/skills/verify-entity-resolution/: SKILL.md  check_resolution.py  snapshot.py
.claude/skills/verify-field-isolation/: SKILL.md  assertions.sql  check_field_isolation.py
.claude/skills/verify-invariants/: SKILL.md  assertions.sql  check_invariants.py
.claude/skills/verify-observability/: SKILL.md  check_observability.py
.claude/skills/verify-pipeline/: SKILL.md  snapshot.py
.claude/skills/verify-skeptic/: SKILL.md  check_deltas.py  snapshot.py
.conductor/: settings.toml
.githooks/: pre-push
.github/workflows/: ci.yml  redeploy.yml
apps/agents/: pyproject.toml
apps/agents/src/mesh_agent_servers/: __init__.py  arxiv_scout.py  blog_scout.py  bluesky_scout.py  claim_extractor.py  curator.py  entity_tracker.py  github_scout.py  hn_scout.py  leaderboard_scout.py  personalizer.py  reddit_scout.py  research_qa.py  rest_json_scout.py  rss_scout.py  skeptic.py  sota_tracker.py  web_search_scout.py
apps/api/: README.md  pyproject.toml
apps/api/src/mesh_api/: __init__.py  deps.py  main.py  scheduler_client.py  schemas.py  security.py
apps/api/src/mesh_api/routers/: agents.py  ask.py  beliefs.py  briefing.py  claims.py  connectors.py  entities.py  fields.py  graph.py  health.py  overview.py  pipeline_runs.py  pipelines.py  schedules.py  skeptic.py  sources.py  stats.py  status.py
apps/cli/: pyproject.toml
apps/cli/src/mesh_cli/: main.py
apps/pipeline/: pyproject.toml
apps/pipeline/src/mesh_pipeline/: __main__.py  _heuristics.py  _investigations.py  belief_consolidation.py  consolidation.py  controller.py  coordinator.py  coordinator_legacy.py  discovery.py  market.py  orchestrator.py  skeptic_sweep.py
apps/scheduler/: pyproject.toml
apps/scheduler/src/mesh_scheduler/: __init__.py  __main__.py  app.py  scheduler.py
apps/telegram/: pyproject.toml
apps/telegram/src/mesh_telegram/: __init__.py  __main__.py  bot.py  client.py  config.py  format.py  health.py
apps/wiki/: .gitignore  README.md  next.config.mjs  package-lock.json  package.json  playwright.config.ts  tailwind.config.ts
apps/wiki/src/: middleware.ts
apps/wiki/src/app/: error.tsx  globals.css  layout.tsx  loading.tsx  page.tsx
apps/wiki/src/app/agents/: page.tsx
apps/wiki/src/app/ask/: page.tsx
apps/wiki/src/components/: agent-graph-view.tsx  agents-panel.tsx  answer-view.tsx  ask-panel.tsx  belief-signals-card.tsx  chat-panel.tsx  claim-card.tsx  connectors-panel.tsx  empty-state.tsx  entity-filter.tsx  evidence-dialog.tsx  fields-panel.tsx  graph-view.tsx  markdown.tsx  nav-bar.tsx  nav.tsx  pagination.tsx  pipelines-panel.tsx  revision-timeline.tsx  segment-error.tsx  segment-loading.tsx  stat-tile.tsx
apps/wiki/src/lib/: api-types.ts  api.ts  auth-server.ts  auth.ts  format.ts  proxy.ts
apps/wiki/src/types/: cytoscape-cose-bilkent.d.ts
apps/wiki/tests/: mock-server.ts
apps/wiki/tests/e2e/: agents.spec.ts  ask.spec.ts  graph.spec.ts  knowledge.spec.ts  nav.spec.ts  pipelines.spec.ts
config/: blog_feeds.yaml
docs/: a2a.md  agent-memory.md  agent-observability.md  agentic-migration.md  agentic-status.md  agents.md  architecture.md  autonomous-discovery.md  belief-consolidation.md  belief-synthesis.md  cost-baseline.md  deployment.md  derived-signals.md  deterministic-controller.md  development.md  entity-resolution-reconciliation.md  entity-resolution.md  episodic-memory.md  field-agnostic.md  history.md  investigations.md  knowledge-chatbot.md  llm-setup.md  model-routing.md  personalization.md  phase-17-field-isolation.md  phase-18-connectors-onboarding.md  phase-19-belief-consolidation.md  phase-20-model-routing.md  phase-21-knowledge-chatbot.md  phase-22-autonomous-discovery.md  phase-23-agent-observability.md  phase-6-baseline.md  phase-7-baseline.md  phase-roadmap-18-23.md  postgres-migration.md  raspberry-pi.md  reasoning-tiers.md  reproduction-signal-exploration.md  scheduling.md  (+3 more)
docs/posts/: falsification-first.md  production-without-deployment.md
monitoring/: README.md  analyze.py  install-pi.sh  pull-and-report.sh  run-snapshot.sh  snapshot.sql
scripts/: explore_reproduction.py  onboard_leafs_field.py
tests/: conftest.py  test_a2a_node.py  test_a2a_task_recorder.py  test_agenda.py  test_agent_invocations_db.py  test_agent_tasks_db.py  test_anthropic_client.py  test_arxiv_scout.py  test_batch.py  test_belief_consolidation_agent.py  test_belief_consolidation_db.py  test_belief_consolidation_engine.py  test_belief_consolidation_job.py  test_beliefs_db.py  test_blog_scout.py  test_bluesky_scout.py  test_claim_extractor.py  test_claims_db.py  test_cli.py  test_confidence.py  test_connectors.py  test_consolidation.py  test_controller.py  test_controller_integration.py  test_coordinator_dedup.py  test_coordinator_graph.py  test_curator.py  test_db_extensions.py  test_derived_signal_views.py  test_discovery.py  test_discovery_sweep.py  test_duckdb_to_pg.py  test_effects.py  test_entities_db.py  test_entity_resolution.py  test_entity_tracker.py  test_episodic.py  test_field_isolation.py  test_field_prompts.py  test_github_scout.py  (+53 more)
tests/api/: conftest.py  test_agents.py  test_ask.py  test_beliefs.py  test_briefing.py  test_claims.py  test_connectors.py  test_entities.py  test_fields.py  test_graph.py  test_graph_data.py  test_health.py  test_pipeline_runs.py  test_schedules.py  test_security.py  test_skeptic.py  test_sources.py  test_stats.py  test_status.py
tests/fixtures/llm_responses/: claim_extraction_result.json  skeptic_assessment.json
tests/integration/a2a/: test_agent_servers.py  test_task_protocol.py
(+54 files in other folders)
