[project]
name = "agent-mesh-workspace"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = []

[tool.uv]
package = false
dev-dependencies = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "mypy>=1.8",
    "ruff>=0.3",
    "mesh-cli",
    "mesh-db",
    "mesh-models",
    "mesh-tracing",
    "mesh-llm",
    "mesh-agents",
    "mesh-pipeline",
]

[tool.uv.workspace]
members = [
    "apps/cli",
    "apps/pipeline",
    "packages/mesh-models",
    "packages/mesh-db",
    "packages/mesh-tracing",
    "packages/mesh-llm",
    "packages/mesh-agents",
]

[tool.uv.sources]
mesh-cli = { workspace = true }
mesh-db = { workspace = true }
mesh-models = { workspace = true }
mesh-tracing = { workspace = true }
mesh-llm = { workspace = true }
mesh-agents = { workspace = true }
mesh-pipeline = { workspace = true }

[tool.pytest.ini_options]
pythonpath = [
    "packages/mesh-models/src",
    "packages/mesh-db/src",
    "packages/mesh-tracing/src",
    "packages/mesh-llm/src",
    "packages/mesh-agents/src",
    "apps/cli/src",
    "apps/pipeline/src",
]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true

[[tool.mypy.overrides]]
module = ["arxiv", "arxiv.*", "structlog", "structlog.*"]
ignore_missing_imports = true
