[project]
name = "agent-mesh-workspace"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = []

[tool.uv]
package = false
dev-dependencies = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
    "mypy>=1.8",
    "ruff>=0.3",
    "testcontainers>=4.0",
    "mesh-cli",
    "mesh-db",
    "mesh-models",
    "mesh-tracing",
    "mesh-llm",
    "mesh-agents",
    "mesh-pipeline",
    "mesh-a2a",
    "mesh-agent-servers",
    "mesh-api",
    "mesh-scheduler",
    "mesh-telegram",
]

[tool.uv.workspace]
members = [
    "apps/cli",
    "apps/pipeline",
    "apps/agents",
    "apps/api",
    "apps/scheduler",
    "apps/telegram",
    "packages/mesh-models",
    "packages/mesh-db",
    "packages/mesh-tracing",
    "packages/mesh-llm",
    "packages/mesh-agents",
    "packages/mesh-a2a",
]

[tool.uv.sources]
mesh-cli = { workspace = true }
mesh-db = { workspace = true }
mesh-models = { workspace = true }
mesh-tracing = { workspace = true }
mesh-llm = { workspace = true }
mesh-agents = { workspace = true }
mesh-pipeline = { workspace = true }
mesh-a2a = { workspace = true }
mesh-agent-servers = { workspace = true }
mesh-api = { workspace = true }
mesh-scheduler = { workspace = true }
mesh-telegram = { workspace = true }

[tool.pytest.ini_options]
pythonpath = [
    "packages/mesh-models/src",
    "packages/mesh-db/src",
    "packages/mesh-tracing/src",
    "packages/mesh-llm/src",
    "packages/mesh-agents/src",
    "packages/mesh-a2a/src",
    "apps/cli/src",
    "apps/pipeline/src",
    "apps/agents/src",
    "apps/api/src",
    "apps/scheduler/src",
    "apps/telegram/src",
]

[tool.mypy]
python_version = "3.11"
# Skill scripts under .claude/ are self-contained tools run via `uv run python
# <path>`, not importable library code. Each skill dir conventionally carries a
# `snapshot.py` / `check_deltas.py`, whose repeated basenames clash with mypy's
# flat module mapping ("Duplicate module named ..."). They're still ruff-linted.
exclude = '^\.claude/'
strict = true
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true

[[tool.mypy.overrides]]
module = [
    "arxiv",
    "arxiv.*",
    "structlog",
    "structlog.*",
    "telegram",
    "telegram.*",
    "a2a",
    "a2a.*",
    "google.protobuf.*",
    "starlette.*",
    "uvicorn.*",
    "feedparser",
    "yaml",
    "apscheduler",
    "apscheduler.*",
    "langfuse",
    "langfuse.*",
    "testcontainers",
    "testcontainers.*",
]
ignore_missing_imports = true
