[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mesh-agent-servers"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "uvicorn",
    "mesh-agents",
    "mesh-llm",
]

[tool.uv.sources]
mesh-agents = { workspace = true }
mesh-llm = { workspace = true }

[project.scripts]
mesh-agent-arxiv-scout = "mesh_agent_servers.arxiv_scout:main"
mesh-agent-claim-extractor = "mesh_agent_servers.claim_extractor:main"
mesh-agent-entity-tracker = "mesh_agent_servers.entity_tracker:main"
mesh-agent-sota-tracker = "mesh_agent_servers.sota_tracker:main"

[tool.hatch.build.targets.wheel]
packages = ["src/mesh_agent_servers"]
