[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mesh-api"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "mesh-db",
    "mesh-models",
]

[tool.uv.sources]
mesh-db = { workspace = true }
mesh-models = { workspace = true }

[project.scripts]
mesh-api = "mesh_api.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src/mesh_api"]
