[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mesh-api"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "httpx>=0.27",
    "mesh-a2a",
    "mesh-db",
    "mesh-models",
    "mesh-scheduler",
]

[tool.uv.sources]
mesh-a2a = { workspace = true }
mesh-db = { workspace = true }
mesh-models = { workspace = true }
mesh-scheduler = { workspace = true }

[project.scripts]
mesh-api = "mesh_api.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src/mesh_api"]
