[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mesh-cli"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "click>=8.0",
    "rich>=13.0",
    "mesh-models",
    "mesh-db",
    "mesh-llm",
    "mesh-agents",
    "mesh-a2a",
    "mesh-scheduler",
]

[tool.uv.sources]
mesh-models = { workspace = true }
mesh-db = { workspace = true }
mesh-llm = { workspace = true }
mesh-agents = { workspace = true }
mesh-a2a = { workspace = true }
mesh-scheduler = { workspace = true }

[project.scripts]
"mesh.cli" = "mesh_cli.main:cli"

[tool.hatch.build.targets.wheel]
packages = ["src/mesh_cli"]
