[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mesh-scheduler"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "apscheduler>=3.10,<4.0",
    "structlog>=24.0",
    "click>=8.0",
    # Phase 9: the scheduler now reads schedule config from the Postgres
    # `schedules` table (via mesh-a2a) and serves an HTTP control surface
    # (Starlette + uvicorn, already in the workspace). mesh-models supplies
    # the SchedulerJobStatus response shape.
    "starlette",
    "uvicorn",
    "mesh-a2a",
    "mesh-db",
    "mesh-models",
]

[tool.uv.sources]
mesh-a2a = { workspace = true }
mesh-db = { workspace = true }
mesh-models = { workspace = true }

[project.scripts]
"mesh-scheduler" = "mesh_scheduler.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/mesh_scheduler"]
