[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mesh-telegram"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    # Long-polling Telegram bot — no inbound port needed, so it works behind
    # the Pi's home-network NAT. The [job-queue] extra pulls APScheduler for
    # the daily-briefing schedule.
    "python-telegram-bot[job-queue]>=21,<22",
    # Talks to the local read API (/api/v1/ask, /api/v1/briefing) over HTTP —
    # it never touches the DB directly, so it reuses all the existing
    # field-scoping + graceful-degradation logic.
    "httpx>=0.27",
    "structlog>=24.0",
    # Tiny health surface for the docker healthcheck (already in the workspace).
    "starlette",
    "uvicorn",
]

[project.scripts]
"mesh-telegram" = "mesh_telegram.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/mesh_telegram"]
